# multiagent-retail-independent-study

./: .gitignore  IMPROVEMENTS.md  PHASE4-007-IMPLEMENTATION-SUMMARY.md  PHASE4-008-EXECUTION-SUMMARY.md  PHASE4-008-IMPLEMENTATION-SUMMARY.md  PHASE4_PROGRESS.md  README.md  agent_workflow_drawer_v2.html  commit_msg.md  reallocation_ui_mock.html
backend/: .env.example  =2.0.0  README.md  __init__.py  compare_models.py  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  streamlit_app_original.py  test_all_enhancements.py  test_enhanced_model.py  test_handoff_chain.py  test_handoff_output.txt  test_historical_sales.csv  test_store_attributes.csv  test_ws_simple.py
backend/.streamlit/: config.toml
backend/agent_tools/: __init__.py  bayesian_reforecast.py  demand_tools.py  inventory_tools.py  pricing_tools.py  reallocation_tools.py  variance_tools.py
backend/app/: main.py
backend/config/: __init__.py  gemini_config.py  openai_config.py  settings.py
backend/guardrails/: __init__.py  allocation_guardrails.py  demand_guardrails.py  forecast_guardrails.py  pricing_guardrails.py
backend/migrations/: env.py
backend/my_agents/: __init__.py  coordinator_agent.py  demand_agent.py  inventory_agent.py  pricing_agent.py  reallocation_agent.py  reforecast_agent.py  triage_agent.py  variance_agent.py
backend/my_agents'_tools/: __init__.py  demand_tools.py
backend/schemas/: __init__.py  allocation_schemas.py  forecast_schemas.py  pricing_schemas.py  reallocation_schemas.py  variance_schemas.py  workflow_schemas.py
backend/scripts/: backup_db.py  (+3 more)
(+812 files in other folders)
